--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/3d.jpg" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/3d.jpg" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.jpeg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,11 +20,11 @@
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/3d.jpg" or "3d.jpg", "%PUBLIC_URL%/3d.jpg" will
+      Unlike "/logo.jpeg" or "logo.jpeg", "%PUBLIC_URL%/logo.jpeg" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>URS Printly</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
